# claude-overlay

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  tauri.conf.json
capabilities/: default.json
docs/: 2026-04-24-claude-overlay-design.md  install.md
docs/adr/: 0001-licensing-and-monetization.md
docs/superpowers/plans/: 2026-05-03-generic-input-routing.md
docs/superpowers/specs/: 2026-05-03-generic-input-routing-design.md
hooks/: claude-overlay-notify.sh
icons/: icon.icns
src/: autostart.rs  daemon.rs  focus_win32.rs  heuristic.rs  input_spec.rs  main.rs  registry.rs  store.rs  tauri_app.rs  tray.rs  vscode_client.rs
tests/: hook_normalization.sh
ui/: app.js  index.html  popover.css  popover.html  popover.js  style.css
vscode-ext/: .vscodeignore  package-lock.json  package.json
vscode-ext/src/: extension.ts
