[package]
name = "claude-overlay"
version = "0.1.0"
edition = "2021"
description = "Always-on-top Dynamic-Island-style overlay for Claude Code hooks"

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
once_cell = "1"
futures-util = "0.3"

[dependencies.windows]
version = "0.56"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_System_Console",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
